syntax = "proto3";

package chef.automate.infra.es_sidecar;
option go_package = "github.com/chef/automate/api/config/es_sidecar";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "es-sidecar-service"};

	reserved 1 to 2;

	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc =  2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Service service = 2;
			chef.automate.infra.config.TLSCredentials tls = 3;
			Backups backups = 4; // Internal only
			Log log = 5;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10123, protocol: "grpc" } ];
			}

			message Backups {
				reserved 3; // old S3Settings
				reserved 4; // newer old S3 settings
				google.protobuf.StringValue backend = 1;
				google.protobuf.BoolValue verify_repo = 6;
				FsSettings fs = 2;
				S3Settings s3 = 5;
				GCSSettings gcs = 7;

				message FsSettings {
					google.protobuf.StringValue root_location = 1;
					google.protobuf.StringValue max_snapshot_bytes_per_sec = 2;
					google.protobuf.StringValue max_restore_bytes_per_sec = 3;
				}

				message S3Settings {
					google.protobuf.StringValue bucket = 1;
					google.protobuf.StringValue client = 2;
					google.protobuf.StringValue base_path = 3;
					chef.automate.infra.config.Backups.S3.Elasticsearch es = 4;
					google.protobuf.BoolValue enable_aws_auth = 5;
					chef.automate.infra.config.External.Elasticsearch.Authentication.AwsElasticsearchAuth aws_auth = 6;
					google.protobuf.StringValue es_url = 7;
				}
				message GCSSettings {
					google.protobuf.StringValue bucket = 1;
					google.protobuf.StringValue client = 2;
					google.protobuf.StringValue base_path = 3;
					chef.automate.infra.config.Backups.GCS.Elasticsearch es = 4;
				}
			}

			message Log {
				google.protobuf.StringValue format = 1;
				google.protobuf.StringValue level = 2;
			}
		}

		message Service {
		}
	}
}
